Add DataFlowResume handling
